# lab07

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  LICENSE  README.md
examples/: example1.cpp
lab07/: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  LICENSE  README.md
lab07/demo/: main.cpp
lab07/examples/: example2.cpp
lab07/include/: print.hpp
sources/: print.cpp
src/: print.cpp
